es-kibana: updated README.md