@@ -38,17 +38,17 @@ ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -p <published ss
 
 ```console
 UID          PID    PPID  C STIME TTY      STAT   TIME CMD
-root           1       0  0 00:53 ?        Ss     0:00 init [2]
-elastic+     587       1 99 00:53 ?        Sl     0:42 /usr/share/elasticsearch/jdk/bin/java -Des.networkaddress.cache.ttl=60 -Des.networkaddress.cache.negative.ttl=10 -XX:+AlwaysPreTouch -Xss1m -Djava.awt.headless=true -Dfile.encoding=UTF-8 -Djna.nosys=true -XX:-OmitStackTraceInFastThrow -Dio.netty.noUnsafe=true -Dio.netty.noKeySetOptimization=true -Dio.netty.recycler.maxCapacityPerThread=0 -Dio.netty.allocator.numDirectArenas=0 -Dlog4j.shutdownHookEnabled=false -Dlog4j2.disable.jmx=true -Djava.locale.providers=COMPAT -Xms1g -Xmx1g -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -Djava.io.tmpdir=/tmp/elasticsearch-13137090376790900626 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/var/lib/elasticsearch -XX:ErrorFile=/var/log/elasticsearch/hs_err_pid%p.log -Xlog:gc*,gc+age=trace,safepoint:file=/var/log/elasticsearch/gc.log:utctime,pid,tags:filecount=32,filesize=64m -XX:MaxDirectMemorySize=536870912 -Des.path.home=/usr/share/elasticsearch -Des.path.conf=/etc/elasticsearch -Des.distribution.flavor=default -Des.distribution.type=deb -Des.bundled_jdk=true -cp /usr/share/elasticsearch/lib/* org.elasticsearch.bootstrap.Elasticsearch -d -p /var/run/elasticsearch/elasticsearch.pid
-elastic+     603     587  0 00:53 ?        Sl     0:00  \_ /usr/share/elasticsearch/modules/x-pack-ml/platform/linux-x86_64/bin/controller
-root         620       1  5 00:53 ?        Ssl    0:00 /usr/sbin/rsyslogd
-root         645       1  0 00:53 ?        Ss     0:00 /usr/sbin/cron
-kibana       651       1 99 00:53 ?        Rl     0:13 /usr/share/kibana/bin/../node/bin/node /usr/share/kibana/bin/../src/cli -c /etc/kibana/kibana.yml
-root         668       1  0 00:53 ?        Ss     0:00 sshd: /usr/sbin/sshd [listener] 0 of 10-100 startups
-root         694     668  0 00:53 ?        Ss     0:00  \_ sshd: debian [priv]
-debian       716     694  0 00:53 ?        S      0:00      \_ sshd: debian@pts/0
-debian       717     716  0 00:53 pts/0    Ss     0:00          \_ -bash
-debian       721     717  0 00:53 pts/0    R+     0:00              \_ ps -ef fww
+root           1       0  0 00:20 ?        Ss     0:00 init [2]
+elastic+     671       1 99 00:20 ?        Sl     0:42 /usr/share/elasticsearch/jdk/bin/java -Xshare:auto -Des.networkaddress.cache.ttl=60 -Des.networkaddress.cache.negative.ttl=10 -XX:+AlwaysPreTouch -Xss1m -Djava.awt.headless=true -Dfile.encoding=UTF-8 -Djna.nosys=true -XX:-OmitStackTraceInFastThrow -XX:+ShowCodeDetailsInExceptionMessages -Dio.netty.noUnsafe=true -Dio.netty.noKeySetOptimization=true -Dio.netty.recycler.maxCapacityPerThread=0 -Dio.netty.allocator.numDirectArenas=0 -Dlog4j.shutdownHookEnabled=false -Dlog4j2.disable.jmx=true -Djava.locale.providers=SPI,COMPAT -Xms1g -Xmx1g -XX:+UseG1GC -XX:G1ReservePercent=25 -XX:InitiatingHeapOccupancyPercent=30 -Djava.io.tmpdir=/tmp/elasticsearch-8594098458122387122 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/var/lib/elasticsearch -XX:ErrorFile=/var/log/elasticsearch/hs_err_pid%p.log -Xlog:gc*,gc+age=trace,safepoint:file=/var/log/elasticsearch/gc.log:utctime,pid,tags:filecount=32,filesize=64m -XX:MaxDirectMemorySize=536870912 -Des.path.home=/usr/share/elasticsearch -Des.path.conf=/etc/elasticsearch -Des.distribution.flavor=default -Des.distribution.type=deb -Des.bundled_jdk=true -cp /usr/share/elasticsearch/lib/* org.elasticsearch.bootstrap.Elasticsearch -d -p /var/run/elasticsearch/elasticsearch.pid
+elastic+     694     671  0 00:21 ?        Sl     0:00  \_ /usr/share/elasticsearch/modules/x-pack-ml/platform/linux-x86_64/bin/controller
+root         709       1  2 00:21 ?        Ssl    0:00 /usr/sbin/rsyslogd
+root         734       1  0 00:21 ?        Ss     0:00 /usr/sbin/cron
+kibana       740       1 99 00:21 ?        Rl     0:21 /usr/share/kibana/bin/../node/bin/node /usr/share/kibana/bin/../src/cli
+root         757       1  0 00:21 ?        Ss     0:00 sshd: /usr/sbin/sshd [listener] 0 of 10-100 startups
+root         774     757  0 00:21 ?        Ss     0:00  \_ sshd: debian [priv]
+debian       784     774  0 00:21 ?        S      0:00      \_ sshd: debian@pts/0
+debian       785     784  0 00:21 pts/0    Ss     0:00          \_ -bash
+debian       814     785  0 00:21 pts/0    R+     0:00              \_ ps -ef fww
 ```
 
 ## ports
